# AutomodelCar2026

./: DOCUMENTACION_MODOS_NAVEGACION.md  DOCUMENTACION_PAQUETES_ROS.md  GUIA_INSTALACION_CONFIGURACION.md  README.md
catkin_ws/src/AVIM_folder/AVIM/launch/: navigation_with_dynamic_obstacles.launch  navigation_with_static_obstacles.launch  navigation_without_obstacles.launch  parking.launch  teleop.launch  tmr2026_main (2).launch  tmr2026_main.launch
catkin_ws/src/AVIM_folder/control/: package.xml
catkin_ws/src/AVIM_folder/control/src/: Master.cpp  Master_parking.cpp  Master_parking_bateria.cpp  Master_static.cpp
catkin_ws/src/AVIM_folder/hardware_interface/: CMakeLists.txt  package.xml
catkin_ws/src/AVIM_folder/hardware_interface/src/: lights_controller.py  motor_drive.py  motor_driver.py  teleop_controller.py  ultrasonic_sensors.py
catkin_ws/src/AVIM_folder/lane_detection/: CMakeLists.txt
catkin_ws/src/AVIM_folder/lane_detection/src/: lane_detection.cpp  stop_sign_detector (1).py  stop_sign_detector.py
catkin_ws/src/AVIM_folder/object_detection/src/: object_detection.cpp
catkin_ws/src/AVIM_folder/object_detection_parking/: CMakeLists.txt
catkin_ws/src/AVIM_folder/object_detection_parking/src/: object_detection_parking.cpp
catkin_ws/src/autonomos_gazebo_simulation/launch/: empty_straight_road.launch
catkin_ws/src/bring_up/launch/: simulation_dynamic_obstacles_COMPLETE.launch  simulation_no_obstacles_COMPLETE.launch  simulation_parking_COMPLETE.launch  simulation_static_obstacles_COMPLETE.launch  spawn_autoNOMOS_mini.launch
